--- a/create-jobs.yml
+++ b/create-jobs.yml
@@ -1,11 +1,7 @@
 - name: create Jenkins jobs
   hosts: localhost
   connection: local
-  tasks:
-    - name: Create Jenkins jobs
-      community.general.jenkins_job:
-        config: "{{ lookup('file', 'test.xml') }}"
-        name: test-create-from ansible
-        password: admin123
-        url: http://172.31.86.214:8080
-        user: admin
+  roles:
+    - jenkins
+
+
