--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -1,12 +1,12 @@
 - name: copy xml file
   ansible.builtin.template:
-    src: sjobsjob.xml
-    dest: /tmp/sjobsjob.xml
+    src: sjob.xml
+    dest: /tmp/test.xml
 
 - name: Create Jenkins jobs
   community.general.jenkins_job:
-    config: "{{ lookup('file', 'sjobsjob.xml') }}"
-    name: "{ { item.job_name } }"
+    config: "{{ lookup('file', '/tmp/test.xml') }}"
+    name: "{{ item.job_name }}"
     password: admin123
     url: http://172.31.86.214:8080
     user: admin
