--- a/roles/jenkins/tasks/sjob.yml
+++ b/roles/jenkins/tasks/sjob.yml
@@ -5,6 +5,7 @@
     password: admin123
     url: http://172.31.86.214:8080
   register: jenkins_job_status
+  ignore_errors: true
 
 - name: copy xml file
   ansible.builtin.template:
