--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -1,5 +1,6 @@
 sjobs:
   - { git_repo_url: https://github.com/Sreeni002/iRobo-Terraform.git, job_name: roboshop-terraform }
   - { git_repo_url: https://github.com/Sreeni002/iRobo-ansible.git, job_name: roboshop-ansible }
+  - { git_repo_url: https://github.com/Sreeni002/iRobo-aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
 
 
