--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -3,4 +3,7 @@ sjobs:
   - { git_repo_url: https://github.com/Sreeni002/iRobo-ansible.git, job_name: roboshop-ansible }
   - { git_repo_url: https://github.com/Sreeni002/iRobo-aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
 
+mjobs:
+  - { git_repo_url: https://https://github.com/Sreeni002/cart, job_name: cart }
+
 
