--- a/roles/jenkins/vars/main.yml
+++ b/roles/jenkins/vars/main.yml
@@ -4,6 +4,12 @@ sjobs:
   - { git_repo_url: https://github.com/Sreeni002/iRobo-aws-ssm-parameter-store.git, job_name: aws-ssm-parameter-store }
 
 mjobs:
-  - { git_repo_url: https://https://github.com/Sreeni002/cart, job_name: cart }
+  - { git_repo_url: https://github.com/Sreeni002/cart.git, job_name: cart }
+  - { git_repo_url: https://https://github.com/Sreeni002/catalogue.git, job_name: catalogue }
+  - { git_repo_url: https://https://github.com/Sreeni002/user.git, job_name: user }
+  - { git_repo_url: https://https://github.com/Sreeni002/shipping.git, job_name: shipping }
+  - { git_repo_url: https://https://github.com/Sreeni002/payment.git, job_name: payment }
+  - { git_repo_url: https://https://github.com/Sreeni002/dispatch.git, job_name: dispatch }
+
 
 
